--- a/BlennyBackup/BlennyBackup.csproj
+++ b/BlennyBackup/BlennyBackup.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
     <ApplicationIcon />
     <Win32Resource />
     <AssemblyName>BlennyBackup</AssemblyName>
