--- a/BlennyBackup/BlennyBackup.csproj
+++ b/BlennyBackup/BlennyBackup.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
     <ApplicationIcon />
     <Win32Resource />
